k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: menstalk
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/notification"
            backend:
              service:
                name: notification-service
                port:
                  number: 8500
          - pathType: Prefix
            path: "/auth-service"
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - pathType: Prefix
            path: "/master-command-service"
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - pathType: Prefix
            path: "/master-query-service"
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - pathType: Prefix
            path: "/bill-command-service"
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - pathType: Prefix
            path: "/bill-query-service"
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - pathType: Prefix
            path: "/swagger-ui"
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - pathType: Prefix
            path: "/swagger-resources"
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - pathType: Prefix
            path: "/v2/api-docs"
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - pathType: Prefix
            path: "/webjars"
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
